--- a/Assigments/Week_4/CartoonDataApp/pom.xml
+++ b/Assigments/Week_4/CartoonDataApp/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>CartoonDataApp</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>VERSION-1.2</version>
     <packaging>war</packaging>
 
     <properties>
@@ -40,6 +40,7 @@
             <artifactId>jackson-databind</artifactId>
             <version>${jackson-version}</version>
         </dependency>
+
     </dependencies>
 
     <build>
